# LiveCalc

./: ANALYSIS-SUMMARY.txt  CLAUDE.md  CLAUDE_WEB_CONTEXT.md  ESTIMATION-ANALYSIS-INDEX.md  FADE-SELF-HEALING-PROPOSAL.md  FADE.md  MOCK-HEALING-REPORT-PRD-LC-013.md  PRD-FADE-SH-001-regression-test-self-healing.json  complexity-estimation-analysis.md  estimation-improvement-strategy.md  fade-export.txt  prd-estimation-data.csv
docs/: README.md  fade-benchmarking-spike.md
fade/: learned.md  prd.json  progress 2.md  progress-archive-pre-2026-01-28.md  progress.md  prompt.md  status.json
livecalc-assumptions-lib/: .gitignore  CMakeLists.txt  LiveCalcAssumptionsLibConfig.cmake.in  README.md  pyproject.toml
livecalc-assumptions-lib/docs/: API.md  CACHE.md  INTEGRATION.md
livecalc-assumptions-lib/examples/: cpp_engine_usage.cpp  python_udf_usage.py
livecalc-assumptions-lib/src/api/: http_client.cpp  http_client.hpp
livecalc-assumptions-lib/src/auth/: jwt_handler.cpp  jwt_handler.hpp
livecalc-assumptions-lib/src/c++/: assumptions_client.cpp  assumptions_client.hpp
livecalc-assumptions-lib/src/cache/: lru_cache.cpp  lru_cache.hpp
livecalc-assumptions-lib/src/python/: __init__.py  assumptions_client.py
livecalc-assumptions-lib/tests/: test_assumptions_client.cpp  test_cache.cpp  test_jwt_handler.cpp  test_python_client.py
livecalc-cloud/: .dockerignore  Dockerfile.worker  PLATFORM.md  README.md
livecalc-demo/: Makefile  README.md  benchmark_projection.cpp
livecalc-engine/: CMakeLists.txt  README.md
livecalc-engine/benchmarks/: benchmark-config.json  compare-simd.ts  generate-comparison-report.ts  package-lock.json  package.json  profile-overhead.ts  run-benchmarks.ts  run-parallel-benchmark.ts  tsconfig.json
livecalc-engine/benchmarks/docs/: SPIKE-LC-007-benchmark-report.json  SPIKE-LC-007-benchmark-report.md  regression-analysis.md
livecalc-engine/benchmarks/results/: benchmark-2026-01-23.json  benchmark-2026-01-24.json  spike-performance-fixed.json
livecalc-engine/build-cli/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cli_tests-b12d07c_include.cmake  cmake_install.cmake  compile_commands.json  livecalc-engine  tests  tests-b12d07c_include.cmake  tests-b12d07c_tests.cmake
livecalc-engine/build-cli/livecalc-assumptions-lib/: Makefile  cmake_install.cmake
livecalc-engine/build-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  livecalc.mjs  livecalc.wasm
livecalc-engine/build-wasm-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  livecalc.mjs  livecalc.wasm  livecalc.wasm.map
livecalc-engine/build-wasm-simd/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  livecalc-simd.mjs
livecalc-engine/data/: sample_expenses.csv  sample_lapse.csv  sample_mortality.csv  sample_policies.csv  sample_scenarios.csv
livecalc-engine/docs/: simd-alignment.md
livecalc-engine/examples/: assumptions.json  udf_smoker_adjustment.py  udf_template.py
livecalc-engine/js/: .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts
livecalc-engine/js/src/: calc-engine.ts  engine-worker.ts  engine.ts  fallback.ts  index.ts  livecalc-adapter.ts  mock-engine.ts  node-worker-pool.ts  node-worker.ts  sab-worker-pool.ts  shared-buffer.ts  simd-detection.ts  types.ts  work-stealing-deque.ts  work-stealing-fallback.ts  work-stealing-pool.ts  work-stealing-worker.ts  worker-pool.ts  worker.ts
livecalc-engine/js/src/engines/: pyodide-engine.ts
livecalc-engine/js/src/orchestrator/: atomic-signals.ts  index.ts  integrity-checker.ts  memory-manager.ts  pipeline-error.ts
livecalc-engine/js/src/workers/: python-worker-host.js
livecalc-engine/js/tests/: atomic-signals.test.ts  calc-engine.test.ts  engine.test.ts  integration.test.ts  integrity-checker.test.ts  livecalc-simd.wasm  memory-manager.test.ts  pipeline-error.test.ts  pyodide-engine.test.ts  python-worker-host.test.js  sab-worker-pool.test.ts  shared-buffer.test.ts  simd.test.ts  work-stealing-deque.test.ts  worker-pool.test.ts
livecalc-engine/src/: assumption_set.cpp  assumption_set.hpp  assumptions.cpp  assumptions.hpp  main.cpp  policy.cpp  policy.hpp  projection.cpp  projection.hpp  scenario.cpp  scenario.hpp  valuation.cpp  valuation.hpp
livecalc-engine/src/io/: csv_reader.cpp  csv_reader.hpp  json_writer.cpp  json_writer.hpp  parquet_reader.cpp  parquet_reader.hpp  parquet_writer.cpp  parquet_writer.hpp
livecalc-engine/src/udf/: udf_context.cpp  udf_context.hpp  udf_executor.cpp  udf_executor.hpp
livecalc-engine/src/wasm/: exports.cpp  wasi_main.cpp
livecalc-engine/tests/: benchmark_valuation.cpp  test_assumption_set.cpp  test_assumptions.cpp  test_cli.cpp  test_cli_integration.sh  test_parquet_io.cpp  test_policy.cpp  test_projection.cpp  test_scenario.cpp  test_udf_execution.cpp  test_valuation.cpp
livecalc-orchestrator/: CMakeLists.txt  README.md
livecalc-orchestrator/examples/: dag_config_full_pipeline.json  dag_config_projection_only.json  logging_example.cpp
livecalc-orchestrator/src/: buffer_manager.cpp  buffer_manager.hpp  config_parser.cpp  config_parser.hpp  credential_manager.cpp  credential_manager.hpp  dag_config.cpp  dag_config.hpp  engine_factory.cpp  engine_factory.hpp  engine_interface.hpp  engine_lifecycle.cpp  engine_lifecycle.hpp  logger.cpp  logger.hpp  orchestrator.cpp  orchestrator.hpp  parquet_io.cpp  parquet_io.hpp  projection_engine.cpp  projection_engine.hpp
livecalc-orchestrator/tests/: test_buffer_manager.cpp  test_credential_manager.cpp  test_dag_config.cpp  test_engine_interface.cpp  test_engine_lifecycle.cpp  test_logger.cpp  test_orchestrator.cpp  test_parquet_io.cpp
livecalc-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
standards/: api-security.md  coding.md  documentation.md  git.md  infrastructure.md  testing.md
tmp/: PRD-LC-008-aks-wasm-runtime-service.json  PRD-LC-011-production-readiness.json  PRD-LC-012-cloud-execution-bridge.json  (+1 more)
(+775 files in other folders)
